# Uebung09

Abgabe9_Johanna_Lisa/: CMakeLists.txt  Matrix.h  Viterbi.cpp  Viterbi.h  main.cpp
Abgabe9_Johanna_Lisa/test/: CMakeLists.txt  matrix_test.cpp  viterbi_tests.cpp
